# ChangeLog for calc-extension:

*calc-extension-2.1:
	Martin Väth <martin at mvath.de>:
	- Bugfix: EPSILON and log now work (again)

*calc-extension-2.0:
	Martin Väth <martin at mvath.de>:
	- Add new functions:
	  log10 log2 log1p expm1 cosh sinh tanh acosh asinh atanh
	  cbrt trunc sign fround clz32
	- Add new constant EPSILON
	- Add buttons to store session locally (and to add such a storage)
	- Copy result automatically to the clipboard
	- Add button to copy the whole session to the clipboard
	- Add button to clear the window
	- Make input field width and output base part of options
	- Add local options in page head
	- Introduce buttons to clear storage and to clear a stored session
	- An empty result now removes the current line
	- Add new inline tokens ! and ? to set/unset non-button mode
	- Let enter key work also with unchanged input fields (non-button mode)
	- Output optical separator in non-button mode
	- Fix activation of next input in non-button mode, see
	  https://github.com/vaeth/calc-extension/issues/2
	- Improve description of options
	- Bugfix: variable "number" can be used now (bug in token handling)

*calc-extension-1.0:
	Martin Väth <martin at mvath.de>:
	- Introduce option to change between textarea/button (new default) or
	  input element (previously only way)
	- Do not use several number formats for output. Instead:
	- Introduce "..." special to set output base
	- Increase width of textareas/input elements to 60. Moreover:
	- Introduce '...' special to set default size of new textareas and to
	  change size of all previous input elements.
	- For all above, see https://github.com/vaeth/calc-extension/issues/1
	- Typo fixes in German translation

*calc-extension-0.2:
	Martin Väth <martin at mvath.de>:
	- Provide brief description on top of page
	- Output in hexadecimal and octal only if number is larger than 7
	- Rename to calc-extension (calc was already used by legacy extension)
	- Update homepage address