@@ -12,25 +12,25 @@
         <th id="announceExamples" valign="top"></th>
         <td>
           <table>
-            <tr><td>7/(1+2*3) + 1.5 + -.5 + 1e2 + 2**2**3</td></tr>
+            <tr><td>1&times;7:7 + 2(1+2&middot;3)(3+2 2)/7&uarr;2 + 4*7%3&nbsp;1.5 + -.5 + 1e2 + 2&uarr;2&uarr;3 - 2**8</td></tr>
             <tr><td>a=#</td></tr>
-            <tr><td>2*a + cos(PI) + log(E) + log(100)/LN10 + sqrt(4)</td></tr>
+            <tr><td>2a + cos &pi; + sin(PI/2)log E + log 100/LN10 + sqrt 4</td></tr>
             <tr><td>0x2F | 021 "16"</td></tr>
-            <tr><td>Long_name = (c=d=#) + c^d^a</td></tr>
+            <tr><td>Variable_1a = (c=d=#) + c^d^a</td></tr>
           </table>
           </td>
       </tr>
       <tr>
         <th id="announceOperators" valign="top"></th>
-        <td>+&nbsp;&nbsp;-&nbsp;&nbsp;*&nbsp;&nbsp;/&nbsp;&nbsp;%&nbsp;&nbsp;**&nbsp;&nbsp;&amp;&nbsp;&nbsp;|&nbsp;&nbsp;^</td>
+        <td>+&nbsp;&nbsp;-&nbsp;&nbsp;*&middot;&times;&nbsp;&nbsp;/:&nbsp;&nbsp;%&nbsp;&nbsp;**&uarr;&nbsp;&nbsp;&amp;&nbsp;&nbsp;|&nbsp;&nbsp;^</td>
       </tr>
       <tr>
         <th id="announceFunctions" valign="top"></th>
-        <td>log10 log2 log log1p(x)=log(1+x) exp expm1(x)=exp(x)-1 sin cos tan acos asin atan sinh cosh tanh acosh asinh atanh sqrt(x)=x**(1/2) cbrt(x)=x**(1/3) abs sign floor ceil round trunc fround clz32</td>
+        <td>sin cos tan acos asin atan sinh cosh tanh acosh asinh atanh log10 log2 log1p(x)=log(1+x) expm1(x)=exp(x)-1 sqrt cbrt(x)&uarr;3=x abs sign floor ceil round trunc fround clz32</td>
       </tr>
       <tr>
         <th id="announceConstants" valign="top"></th>
-        <td>E=exp(1) PI=acos(-1) SQRT2=sqrt(2) SQRT1_2=sqrt(1/2) LN2=log(2) LN10=log(10) LOG2E=log2(E) LOG10E=log10(E) EPSILON</td>
+        <td>E=exp 1, PI=&pi;=acos -1, SQRT2=sqrt 2, SQRT1_2=sqrt(1/2), LN2=log 2, LN10=log 10, LOG2E=log2 E, LOG10E=log10 E, EPSILON=&epsilon;</td>
       </tr>
       <tr>
         <th id="announceInline" valign="top"></th>
